# ifx-linux-bluetooth

./: BT_Linux_CE.sh  README.md  bt_autobaud.sh  bt_reg_onoff.sh  build_apps.sh
bluetooth-linux/: CMakeLists.txt  README.md  RELEASE.md  alsa_audio_capture.c  alsa_audio_capture.h  bts_io_msg.h  btttysdio_ioctl.h  data_types.h  hci_uart_linux.c  hci_uart_linux.h  linux_main.c  linux_tcp_server.c  log.h  nvram.c  patch_download.c  patch_download.h  platform_linux.h  sco_process.c  sco_process.h  spy_ux.c  userial.h  utils_arg_parser.c  utils_arg_parser.h  version.xml  wiced_bt_app.c
bluetooth-linux/COMPONENT_audio_module/: audio_driver_linux.c  audio_parse_wave.c  audio_sine_wave.c  audio_sine_wave.h
bluetooth-linux/COMPONENT_audio_module/include/: audio_driver.h  audio_parse_wave.h
bluetooth-linux/wiced_hal/: wiced_hal_memory.c  wiced_hal_memory.h  wiced_hal_nvram.c  wiced_hal_nvram.h  wiced_hal_puart.h  wiced_hal_rand.c  wiced_hal_rand.h  wiced_hal_sha256.c  wiced_hal_utils.c  wiced_hal_utils.h
bt-audio-profiles/: README.md  RELEASE.md
bt-audio-profiles/COMPONENT_a2dp_sink_profile/: wiced_bt_a2dp_int.h  wiced_bt_a2dp_m12.c  wiced_bt_a2dp_m24.c  wiced_bt_a2dp_sbc.c  wiced_bt_a2dp_sink_act.c  wiced_bt_a2dp_sink_api.c  wiced_bt_a2dp_sink_cfg.c  wiced_bt_a2dp_sink_int.h  wiced_bt_a2dp_sink_main.c  wiced_bt_a2dp_sink_ssm.c
bt-audio-profiles/COMPONENT_a2dp_source_profile/: wiced_bt_a2dp_int.h  wiced_bt_a2dp_src_act.c  wiced_bt_a2dp_src_api.c  wiced_bt_a2dp_src_cfg.c  wiced_bt_a2dp_src_int.h  wiced_bt_a2dp_src_main.c  wiced_bt_a2dp_src_sbc.c  wiced_bt_a2dp_src_ssm.c
bt-audio-profiles/COMPONENT_avrc_controller/: wiced_bt_avrc_ct.c
bt-audio-profiles/COMPONENT_avrc_target/: wiced_bt_avrc_tg.c  wiced_bt_avrc_tg_int.h
bt-audio-profiles/COMPONENT_handsfree_profile/: wiced_bt_hfp_hf_act.c  wiced_bt_hfp_hf_api.c  wiced_bt_hfp_hf_at.c  wiced_bt_hfp_hf_cmd.c  wiced_bt_hfp_hf_int.h  wiced_bt_hfp_hf_main.c  wiced_bt_hfp_hf_ssm.c  wiced_bt_hfp_hf_utils.c
bt-audio-profiles/COMPONENT_hfp_audio_gateway/: wiced_bt_hfp_ag.c  wiced_bt_hfp_ag_command.c  wiced_bt_hfp_ag_int.h  wiced_bt_hfp_ag_rfcomm.c  wiced_bt_hfp_ag_sco.c  (+1 more)
btsdk-gfps/: README.md
code-examples/linux-example-btstack-broadcast-source/: CMakeLists.txt  README.md
code-examples/linux-example-btstack-broadcast-source/COMPONENT_LC3_CODEC/: lc3_codec.h
code-examples/linux-example-btstack-broadcast-source/app/: broadcast_source.c  broadcast_source_bis.c  broadcast_source_bis.h  broadcast_source_bt_manager.c  broadcast_source_bt_manager.h  broadcast_source_iso_audio.h  broadcast_source_isoc.c  broadcast_source_rpc.c  broadcast_source_rpc.h  main.c
code-examples/linux-example-btstack-broadcast-source/app_bt_config/: wiced_bt_cfg.c
code-examples/linux-example-btstack-broadcast-source/app_bt_utils/: app_bt_utils.c  app_bt_utils.h
code-examples/linux-example-btstack-broadcast-source/include/: broadcast_source.h  hci_control_api.h
code-examples/linux-example-btstack-headset/: CMakeLists.txt  README.md  RELEASE.md  localbuild.sh
code-examples/linux-example-btstack-headset/app/: headset.c  headset_control.c  headset_control.h  headset_control_le.c  headset_control_le.h  main.c  platform_audio_interface.c  wiced_hal_nvram_wrapper.c
code-examples/linux-example-btstack-headset/app_bt_config/: wiced_app_cfg.c  wiced_app_cfg.h  wiced_bt_cfg.c
code-examples/linux-example-btstack-headset/app_bt_utils/: app_bt_utils.c  app_bt_utils.h
code-examples/linux-example-btstack-headset/audiomanager/: audio_effects.c  audio_effects.h  platform_audio_device.h  platform_audio_device_wrapper.c  platform_audio_effects.h  wiced_audio_manager.c  wiced_audio_manager.h
code-examples/linux-example-btstack-headset/bt_hs_spk_lib/: bt_hs_spk_audio.c  bt_hs_spk_audio.h  bt_hs_spk_button.c  bt_hs_spk_button.h  bt_hs_spk_control.c  bt_hs_spk_control.h  bt_hs_spk_handsfree.c  bt_hs_spk_handsfree.h  bt_hs_spk_handsfree_utils.c  bt_hs_spk_handsfree_utils.h
code-examples/linux-example-btstack-headset/include/: hci_control_api.h  headset.h  headset_nvram.h  log.h  platform_audio_interface.h  wiced_bt_event.h  wiced_bt_factory_app_config.h  wiced_bt_gatt_util.h  wiced_button_manager.h
code-examples/linux-example-btstack-headset/linux_platform/: alsa_capture.c  alsa_capture.h  alsa_playback.c  alsa_playback.h  bt_decode_queue.c  bt_decode_queue.h
code-examples/linux-example-btstack-spp/: CMakeLists.txt  README.md
code-examples/linux-example-btstack-spp/app/: main.c  spp.c
code-examples/linux-example-btstack-spp/app_bt_config/: wiced_bt_cfg.c
code-examples/linux-example-btstack-spp/include/: spp.h
code-examples/linux-example-btstack-unicast-sink/COMPONENT_LC3_CODEC/: CMakeLists.txt
code-examples/linux-example-btstack-unicast-sink/COMPONENT_LC3_CODEC/google_lc3/: lc3_codec.c
code-examples/linux-example-btstack-unicast-source/: CMakeLists.txt  README.md
code-examples/linux-example-btstack-unicast-source/COMPONENT_LC3_CODEC/: lc3_codec.h
code-examples/linux-example-btstack-unicast-source/COMPONENT_LC3_CODEC/google_lc3/: build_google_lc3.sh  lc3_codec.c
code-examples/linux-example-btstack-unicast-source/app/: main.c  unicast_source.c  unicast_source_ascs.c  unicast_source_ascs.h  unicast_source_bt_manager.c  unicast_source_bt_manager.h  unicast_source_cap.c  unicast_source_cap.h  unicast_source_gatt.c  unicast_source_gatt.h  unicast_source_iso.h  unicast_source_isoc.c  unicast_source_mcs.c  unicast_source_mcs.h  unicast_source_pacs.c  unicast_source_rpc.c  unicast_source_rpc.h  unicast_source_vcs.c  unicast_source_vcs.h
code-examples/linux-example-btstack-unicast-source/app_bt_config/: wiced_bt_cfg.c
code-examples/linux-example-btstack-unicast-source/app_bt_utils/: app_bt_utils.c  app_bt_utils.h
code-examples/linux-example-btstack-unicast-source/include/: hci_control_api.h  unicast_source.h
fw/: CYW4343A2_001.003.016.0063.0000_Generic_UART_26MHz_wlbga_BU_Audio_dl_signed.hcd  CYW4373A0_001.001.025.0118.0000_Generic_UART_37_4MHz_wlbga_BU_dLNA.hcd  CYW55560A1_001.002.087.0254.0000_Generic_UART_37_4MHz_fcbga_iPA_dLNA_ANT0.hcd
(+324 files in other folders)
